service.yml
apiVersion: v1
kind: Service
metadata:
 name: simple-server
 namespace: default
spec:
 type: ClusterIP
 ports:
   - port: 8000
     targetPort: 8000
 selector:
   app: simple-server
