ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-server
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/minikh(/|$)(.*) #http://arch.homework/otusapp/minikh/health/
            pathType: Prefix
            backend:
              service:
                name: simple-server
                port:
                  number: 8000
          - path: / #http://arch.homework/health/
            pathType: Prefix
            backend:
              service:
                name: simple-server
                port:
                  number: 8000
